Solución de 2019/1/MAT1610/12.5

--- a/2019/1/MAT1610/12.5/solucion.tex
+++ b/2019/1/MAT1610/12.5/solucion.tex
@@ -256,123 +256,61 @@ Usando el TFC, tenemos que
 		Luego, evaluamos en $x=0$
 		$$F'(0) = \dfrac{5e^{(1)^2}}{1+(1)^4} = \dfrac{5e}{2}$$
 \end{solucion}
-\item Calcule los siguientes límites, en caso de que existan
+\item Demuestre que la función
+$$F(x) = \displaystyle\int_{1-x}^{1+x} \ln(t^2)dt, \quad x \in [0, \frac{1}{2}]$$
+es decreciente
+\begin{solucion}
+Recordemos que para un función cualquiera
+$$F(x) = \displaystyle\int_a^{g(x)}f(t)dt \ra F'(x) = f(g(x))g'(x)$$
+Vamos ahora con el ejercicio.\\
+
+Notemos que podemos escribir $F(x)$ de la siguiente forma
+$$F(x) =
+\displaystyle\int_{1-x}^{1} \ln(t^2)dt + \displaystyle\int_{1}^{1+x} \ln(t^2)dt =
+-\displaystyle\int_{1}^{1-x} \ln(t^2)dt + \displaystyle\int_{1}^{1+x} \ln(t^2)dt
+$$
+Luego, al derivar,
+$$F'(x) = -\ln((1-x)^2)\cdot (-1) + \ln((1+x)^2)$$
+Simplificando,
+$$F'(x) = \ln((1-x)^2) + \ln((1+x)^2)
+= \ln(((1-x)(1+x))^2)
+= 2\ln(1-x^2)$$
+Luego, como 
+$$0 \leq x \leq \dfrac{1}{2} \ra \dfrac{3}{4} \leq 1-x^2 \leq 1$$
+Concluimos que 
+$$F'(x) = 2\ln(1-x^2) \leq 0$$
+Por lo que la función es decreciente.
+\end{solucion}
+\item Resolver las siguientes integrales indefinidas
 \begin{tasks}(2)
-\task $\lim\limits_{x \ra 5} \dfrac{1}{x-5}$ 
-\task $\lim\limits_{x \ra 2} \dfrac{4x}{6-x}$
-\task $\lim\limits_{x \ra -1} \dfrac{x^3+1}{x^2-1}$
-\task $\lim\limits_{x \ra 3} \dfrac{\sqrt[]{4-x}-1}{x-3}$
-\task $\lim\limits_{x \ra 2} \dfrac{\sqrt[]{6-x}-2}{\sqrt[]{3-x}-1}$
-\task $\lim\limits_{x \ra 1} \dfrac{x^4+2x^3-3x^2+4x-4}{x^4+2x-3}$
-\task $\lim\limits_{x \ra 0} \dfrac{|x|(|x|-x)}{x^2}$
-\task $\lim\limits_{x \ra 2}\left(\dfrac{1}{x}-\dfrac{1}{|x|}\right)$
+\task $\displaystyle\int \dfrac{e^{ln(x)}}{x^2+7}dx$
+\task $\displaystyle\int (x+2)sen(x^2+4x-6)dx$
+\task $\displaystyle\int \dfrac{3x}{\sqrt[3]{x^2+3}}dx$
+\task $\displaystyle\int \dfrac{e^x-1}{e^x+1}dx$
 \end{tasks}
 \begin{solucion}
 
 \begin{enumerate}[a)]
-\item $\lim\limits_{x \ra 5} \dfrac{1}{x-5}$\\
-\\
-Al evaluar en $x = 5$, podemos ver que se genera una discontinuidad,
-$$\lim\limits_{x \ra 5} \dfrac{1}{x-5} = \dfrac{1}{5-5} = \dfrac{1}{0} = \infty = \not\exists$$
-Por lo tanto, concluimos que el límite no existe.
-\item $\lim\limits_{x \ra 2} \dfrac{4x}{6-x}$\\
-\\
-Como no se genera ninguna discontinuidad en $x = 2$, podemos evaluar directamente, obteniendo
-$$\lim\limits_{x \ra 2} \dfrac{4x}{6-x} = \dfrac{4 \cdot 2}{6-2} = \dfrac{8}{4} = 2$$
-\item $\lim\limits_{x \ra -1} \dfrac{x^3+1}{x^2-1}$\\
-\\
-Al evaluar en $x = -1$, podemos notar que obtendremos $\dfrac{0}{0}$, lo que no nos dice nada. Entonces, tenemos que buscar otra forma de evaluar el límite. Intentemos factorizar.
-$$\lim\limits_{x \ra -1} \dfrac{x^3+1}{x^2-1} = \lim\limits_{x \ra -1} \dfrac{(x+1)(x^2-x+1)}{(x+1)(x-1)} = \lim\limits_{x \ra -1} \dfrac{(x^2-x+1)}{(x-1)} = -\dfrac{3}{2}$$
-Al factorizar somos capaces de eliminar lo que nos generaba problemas y luego podemos evaluar directamente.
-\item $\lim\limits_{x \ra 3} \dfrac{\sqrt[]{4-x}-1}{x-3}$\\
-\\
-En este caso, nos ocurre algo similar al ejercicio anterior, sin embargo, no es tan sencillo la simplificación que debemos hacer. \\
-Para esto, utilicemos el método de la sustitución. Sea $u = \sqrt[]{4-x}$,\\
-Luego,
-$$x \ra 3$$
-$$-x \ra -3$$
-$$4-x \ra 1$$
-$$\sqrt[]{4-x} \ra 1$$
-$$u \ra 1$$
-Procedemos a escribir el límite en términos de $u$
-$$\lim\limits_{x \ra 3} \dfrac{\sqrt[]{4-x}-1}{x-3}
-= \lim\limits_{u \ra 1} \dfrac{u-1}{1-u^2} $$
-Ahora, resolvemos como siempre, es decir,
-$$\lim\limits_{u \ra 1} \dfrac{u-1}{1-u^2} 
-= \lim\limits_{u \ra 1} \dfrac{u-1}{(1+u)(1-u)}
-= \lim\limits_{u \ra 1} \dfrac{-(1-u)}{(1+u)(1-u)}
-= \lim\limits_{u \ra 1} \dfrac{-1}{(1+u)}
-= -\dfrac{1}{2}$$
-\item $\lim\limits_{x \ra 2} \dfrac{\sqrt[]{6-x}-2}{\sqrt[]{3-x}-1}$\\
-\\
-En este caso podríamos utilizar sustitución como antes, pero dado que hay dos raices distintas, sería complicado. Por lo tanto, usaremos la técnica de la racionalización, esto es
-$$\lim\limits_{x \ra 2} \dfrac{\sqrt[]{6-x}-2}{\sqrt[]{3-x}-1}
-=\lim\limits_{x \ra 2} \dfrac{\sqrt[]{6-x}-2}{\sqrt[]{3-x}-1} \cdot \dfrac{\sqrt[]{3-x}+1}{\sqrt[]{3-x}+1} 
-=\lim\limits_{x \ra 2} \dfrac{(\sqrt[]{6-x}-2)(\sqrt[]{3-x}+1)}{2-x} $$
-Ahora, como lo que nos da problemas es el parentesis izquierdo, usaremos la sustitución
-$$u = \sqrt[]{6-x} \Longrightarrow u \ra 2$$
-Con esto, obtenemos el límite
-$$\lim\limits_{u \ra 2} \dfrac{(u-2)(\sqrt[]{u^2-3}+1)}{u^2-4} 
-=\lim\limits_{u \ra 2} \dfrac{(u-2)(\sqrt[]{u^2-3}+1)}{(u+2)(u-2)} 
-=\lim\limits_{u \ra 2} \dfrac{\sqrt[]{u^2-3}+1}{u+2}
-=\dfrac{1}{2}$$
-\item $\lim\limits_{x \ra 1} \dfrac{x^4+2x^3-3x^2+4x-4}{x^4+2x-3}$\\
-\\
-Aquí podemos ver claramente que ambas partes del limite se hacen 0 en $x=1$. Sin embargo, al ser un polinomio de grado 4, se hace dificil factorizarlo \textit{al ojo}.\\
-Recordemos que por el Teorema del Resto, sabemos que si un polinomio $P(x)$ cumple con $P(a) = 0$, entonces $P(x)$ es divisible por $(x-a)$. Por lo tanto, ya sabemos que ambas partes son divisibles por $(x-1)$. Para factorizar entonces, podemos utilizar la división polinómica, dividiendo numerador y denominador por $(x-1)$.
-En primer lugar, hagamos $x^4+2x^3-3x^2+4x-4 : x-1$, es decir,
-\[
-\renewcommand\arraystretch{1.5}
-\setlength\doublerulesep{0pt}
-\begin{array}{rrrrrr}
-\multicolumn{1}{r|}{1} & 1 & 2 & -3 & 4 & -4\\\cline{2-6}
-& & 1& 3 & 0 & 4\\\cline{2-6}
-& 1 & 3& 0 & 4 & 0
-\end{array}
-\]
-por lo que $x^4+2x^3-3x^2+4x-4 : x-1 = x^3+3x^2+4$\\
-Luego, $x^4+2x-3 : x-1$, esto es,
-\[
-\renewcommand\arraystretch{1.5}
-\setlength\doublerulesep{0pt}
-\begin{array}{rrrrrr}
-\multicolumn{1}{r|}{1} & 1 & 0 & 0 & 2 & -3\\\cline{2-6}
-& & 1& 1 & 1 & 3\\\cline{2-6}
-& 1 & 1& 1 & 3 & 0
-\end{array}
-\]
-por lo que $x^4+2x-3 : x-1 = x^3+x^2+x+3$
-Entonces, podemos escribir el límite como
-$$\lim\limits_{x \ra 1} \dfrac{(x^3+3x^2+4)(x-1)}{(x^3+x^2+x+3)(x-1)}
-= \lim\limits_{x \ra 1} \dfrac{(x^3+3x^2+4)}{(x^3+x^2+x+3)}
-= \dfrac{8}{6} = \dfrac{4}{3}$$
-\item $\lim\limits_{x \ra 0} \dfrac{|x|(|x|-x)}{x^2}$\\
-\\
-Dado que el límite posee valores absolutos y estamos buscando el límite justo en el punto donde la definición del valor absoluto cambia, debemos evaluar el límite desde ambos lados.\\\\
-Recordemos que
-$$|x| = \begin{cases}
-x & x \geq 0 \\
--x & x < 0
-\end{cases}
-$$
-Entonces el límite por el lado izquierdo es
-$$\lim\limits_{x \ra 0-} \dfrac{|x|(|x|-x)}{x^2} =
-\lim\limits_{x \ra 0-} \dfrac{x(x-x)}{x^2} =
-\lim\limits_{x \ra 0-} \dfrac{0}{x} =
-\lim\limits_{x \ra 0-} 0 =
-0$$
-Notemos que este límite es 0, dado que los $x$ se anulan entre si \textbf{antes} de evaluar el límite.\\\\
-Luego, por el lado derecho,
-$$\lim\limits_{x \ra 0+} \dfrac{|x|(|x|-x)}{x^2} =
-\lim\limits_{x \ra 0+} \dfrac{-x(-x-x)}{x^2} =
-\lim\limits_{x \ra 0+} \dfrac{2x^2}{x^2} =
-2 $$
-Como los límites laterales no coinciden, el límite no existe.
-\item $\lim\limits_{x \ra 2}\left(\dfrac{1}{x}-\dfrac{1}{|x|}\right)$\\
-\\
-Un error común aquí sería hacer el límite por ambos lados cambiando el signo. Sin embargo, notemos que estamos buscando el límite en torno a $x=2$. A ambos lados de $x=2$, el valor absoluto seguira utilizando la misma definición, por lo que basta con evaluar inmediatamente. Con esto,
-$$\lim\limits_{x \ra 2}\left(\dfrac{1}{x}-\dfrac{1}{|x|}\right) = 
-\dfrac{1}{2}-\dfrac{1}{|2|} = 0$$
+\item $\displaystyle\int \dfrac{e^{ln(x)}}{x^2+7}dx = \displaystyle\int \dfrac{x}{x^2+7}dx$\\
+			Usamos la sustitución $u = x^2+7 \ra du = 2xdx$
+			$$= \dfrac{1}{2} \displaystyle\int \dfrac{2}{u}dx = \dfrac{1}{2} ln(u) + c = \dfrac{1}{2}ln(x^2+7) + c$$
+\item $\displaystyle\int (x+2)sen(x^2+4x-6)dx$\\
+			Utilizando la sustitución $u = x^2+4x-6 \ra du = 2x + 4 \ra du = 2(x+2)$
+			$$=\dfrac{1}{2}\displaystyle\int sen(u)du = -\dfrac{1}{2}cos(u) = -\dfrac{1}{2}cos(x^2+4x-6)+c$$
+\item $\displaystyle\int \dfrac{3x}{\sqrt[3]{x^2+3}}dx$\\
+			La sustitución a usar es $u=x^2+3 \ra du=2xdx$
+			$$= \dfrac{3}{2} \displaystyle\int \dfrac{1}{\sqrt[3]{u}}du = \dfrac{3}{2} \displaystyle\int \dfrac{1}{u^{1/3}}du = \dfrac{3}{2} \displaystyle\int u^{-1/3}du = \dfrac{3}{2}\dfrac{u^{2/3}}{\frac{2}{3}} + c = \dfrac{9}{4}(t^2+3)^{2/3}+c$$
+\item $\displaystyle\int \dfrac{e^x-1}{e^x+1}dx = \displaystyle\int \dfrac{e^x}{e^x+1}dx - \displaystyle\int \dfrac{1}{e^x+1}dx$\\
+			Resolvamos ambas por separado. En primer lugar,
+			$$ \displaystyle\int \dfrac{e^x}{e^x+1}dx$$
+			Utilizamos la sustitución $u=e^x+1 \ra du=e^x$
+			$$= \displaystyle\int \dfrac{du}{u} = ln(u) + c = ln(e^x+1)+c$$
+			Ahora, resolveremos
+			$$-\displaystyle\int \dfrac{1}{e^x+1}dx = -\displaystyle\int \dfrac{e^xe^{-x}}{e^x+1}dx= -\displaystyle\int \dfrac{e^{-x}}{e^{-x}(e^x+1)}dx = -\displaystyle\int \dfrac{e^{-x}}{1+e^{-x}}dx$$
+			Usando $u=1+e^{-x} \ra du = -e^{-x}$
+			$$= \displaystyle\int \dfrac{du}{u}dx = ln(u) +c = ln(1+e^{-x})+c$$
+			Por último, al sumar ambas obtenemos
+			$$\displaystyle\int \dfrac{e^x-1}{e^x+1}dx = ln(1+e^x) + ln(1+e^{-x}) + c = ln((1+e^x)(1+e^{-x}))+c$$
 \end{enumerate}
 \end{solucion}
 \item Resolver las siguientes integrales definidas
