--- a/2018/1/MAT1203/12/enunciado.tex
+++ b/2018/1/MAT1203/12/enunciado.tex
@@ -113,5 +113,27 @@
 \end{center}
 
 \begin{preguntas}
+\item Sean $u, v$ dos vectores ortogonales en $\R^n$ tales que $||u|| = 1, ||v|| = \sqrt[]{3/2}$. Demuestre que el conjunto 
+	$$B = \{u-v, 3u+2v\}$$
+	es ortogonal y encuentre las coordenadas del vector $4u - 9v$ respecto al conjunto $B$.
+\item Sea 
+	$U = Gen\left\{
+	\begin{bmatrix}1\\0\\1\\1\end{bmatrix},
+	\begin{bmatrix}0\\1\\2\\1\end{bmatrix},
+	\begin{bmatrix}1\\1\\3\\2\end{bmatrix}
+	\right\}$.
+\begin{enumerate}[a)]
+\item Encuentre una base ortonormal de $U$.
+\item Encuentre la distancia de $b = 
+		\begin{bmatrix}1\\1\\1\\1\end{bmatrix}$ a $U$.
+\end{enumerate}
+\item Demuestre que si $P$ es una matriz ortogonal de  $n \times n$, entonces para todo $x, y \in \R^n$ se tiene que $Px \cdot Py = x \cdot y$
+\item Diagonalice ortogonalmente
+	$$M = \begin{bmatrix}
+	1 & 0 & 1 \\
+	0 & 2 & 0 \\
+	1 & 0 & 1
+	\end{bmatrix}$$
+\item Un cierto experimento genera los datos $(1,3)$, $(2,5)$ y $(3,4)$. Describa el modelo que da un ajuste de mínimos cuadrados de esos puntos mediante una recta de la forma $y = \beta_0 +  \beta_1x$
 \end{preguntas}
 \end{document}
