Enunciado de 2019/1/MAT1203/12

--- a/2019/1/MAT1203/12/enunciado.tex
+++ b/2019/1/MAT1203/12/enunciado.tex
@@ -113,5 +113,15 @@
 \end{center}
 
 \begin{preguntas}
+\item Sean $u, v$ dos vectores ortogonales en $\R^n$ tales que $||u|| = 1, ||v|| = \sqrt[]{3/2}$. Demuestre que el conjunto 
+	$$B = \{u-v, 3u+2v\}$$
+	es ortogonal y encuentre las coordenadas del vector $4u - 9v$ respecto al conjunto $B$.
+\item Demuestre que si $P$ es una matriz ortogonal de  $n \times n$, entonces para todo $x, y \in \R^n$ se tiene que $Px \cdot Py = x \cdot y$
+\item Diagonalice ortogonalmente
+	$$M = \begin{bmatrix}
+	1 & 0 & 1 \\
+	0 & 2 & 0 \\
+	1 & 0 & 1
+	\end{bmatrix}$$
 \end{preguntas}
 \end{document}
