Enunciado de 2019/1/MAT1203/12

--- a/2019/1/MAT1203/12/enunciado.tex
+++ b/2019/1/MAT1203/12/enunciado.tex
@@ -123,5 +123,6 @@
 	0 & 2 & 0 \\
 	1 & 0 & 1
 	\end{bmatrix}$$
+\item Sean $B = \begin{bmatrix} 1 & -1 \\ 0 & 0 \end{bmatrix}$ y $C = \{X \in M_2(\R)|BX=0\}$. Determine una base y la dimensión de $C$.
 \end{preguntas}
 \end{document}
