Solución de 2019/1/MAT1203/12

--- a/2019/1/MAT1203/12/solucion.tex
+++ b/2019/1/MAT1203/12/solucion.tex
@@ -189,5 +189,9 @@ Para hacer esto debemos hacer un procedimiento similar al que realizamos cuando 
 		0 & 0 & 2
 		\end{bmatrix}$$
 \end{solucion}
+\item Sean $B = \begin{bmatrix} 1 & -1 \\ 0 & 0 \end{bmatrix}$ y $C = \{X \in M_2(\R)|BX=0\}$. Determine una base y la dimensión de $C$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
