--- a/2019/1/MAT1203/12/solucion.tex
+++ b/2019/1/MAT1203/12/solucion.tex
@@ -193,5 +193,15 @@ Para hacer esto debemos hacer un procedimiento similar al que realizamos cuando 
 \begin{solucion}
 
 \end{solucion}
+\item Sea $T: \mathbb{P}_2 \ra \mathbb{P}_2$ una transformación lineal cuya matriz de transformación respecto a la base $B = \{1, t, t^2\}$ está dada por
+$$[T]_B = \begin{bmatrix}
+1 & -1 & 1\\
+0 & 2 & -1\\
+-1 & 3 & -2
+\end{bmatrix}$$
+Determine $T(t^2+1)$ y el espacio Nulo de $T$.
+\begin{solucion}
+
+\end{solucion}
 \end{preguntas}
 \end{document}
