--- a/2019/1/MAT1203/12.5/solucion.tex
+++ b/2019/1/MAT1203/12.5/solucion.tex
@@ -113,5 +113,687 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea 
+	$$U=\{p(x) \in \mathbb{P}_2 : p(1) + p(0) = p(-1)\}$$
+	Determinar una base de $U$.
+\begin{solucion}
+			Sea $p(x) \in \mathbb{P}_2$ un polinomio de la forma $p(x) = a + bx + cx^2$\\
+			\\
+			Para que pertenezca a $U$, debe cumplirse que
+			$$p(1) + p(0) = p(-1)$$
+			$$a+b+c+a=a-b+c$$
+			$$a = -2b$$
+			Luego,
+			$$\begin{array}{rcl}
+			a & = & -2b\\
+			b & = & b\\
+			c & = & c
+			\end{array}$$
+			Entonces, podemos reescribir el polinomio como
+			$$p(x) = -2b + bx + cx^2$$
+			$$p(x) = b(x-2) + c(x^2)$$
+			Finalmente,
+			$$U = Gen\{x-2, x^2\}$$
+\end{solucion}
+\item Use vectores de coordenadas para probar la independencia lineal del conjunto de polinomios $\{1-2t^2-t^3,t+2t^3,1+t-2t^2\}$.
+\begin{solucion}
+La base que utilizaremos será
+		$$B = \{1,t,t^2,t^3\}$$
+		Luego, podemos reescribir cada elemento del conjunto de la siguiente forma
+		$$\begin{array}{lcl}
+		1-2t-t^3 & \ra & (1,\ \ 0,-2,-1)\\
+		t+2t^3 & \ra & (0,\ \ 1,\ \ 0,\ \ 2)\\
+		1+t-2t^3 & \ra & (1,\ \ 1,-2,\ \ 0)
+		\end{array}$$
+		Ahora, para probar que los elementos del conjunto son $L.I.$, basta con probar que los vectores de coordenadas lo son. Para esto, ponemos los vectores en una matriz y pivoteamos:
+		$$\begin{bmatrix}
+		1 & 0 & 1\\
+		0 & 1 & 1\\
+		-2 & 0 & -2\\
+		-1 & 2 & 0
+		\end{bmatrix} \sim
+		\begin{bmatrix}
+		1 & 0 & 1\\
+		0 & 1 & 1\\
+		0 & 0 & 1\\
+		0 & 0 & 0
+		\end{bmatrix}$$
+		Con lo que concluimos que son $L.I.$
+		$$\blacksquare$$
+\end{solucion}
+\item Sean $p_1(t) = 1-t^2, p_2(t) = 1+t, p_3(t) = 1+t+t^2$. Se sabe que $\{p_1(t), p_2(t), p_3(t)\}$ es una base de $\mathbb{P}_2$.
+\begin{enumerate}[a)]
+\item Exprese los polinomios $f(t) = 3-5t + 2t^2$ y $g(t) = 1-3t$ como combinaciones lineales de $\{p_1(t), p_2(t), p_3(t)\}$.
+\item Use los vectores de coordenadas encontrados en la parte anterior para determinar si el conjunto $\{p_1(t), f(t), g(t)\}$ es L.I. o L.D.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item Exprese los polinomios $f(t) = 3-5t + 2t^2$ y $g(t) = 1-3t$ como combinaciones lineales de $\{p_1(t), p_2(t), p_3(t)\}$.\\
+			\\
+			Sea una base 
+			$$B = \{p_1(t), p_2(t), p_3(t)\} = $$, lo que estamos buscando son las coordenadas de $f$ y $g$ en la base $B$.\\
+			\\
+			En primer lugar, veamos $f(t)$. Debemos buscar $a$, $b$, $c$, tal que
+			$$f(t) = 3-5t + 2t^2 = ap_1(t) + bp_2(t) + cp_3(t)$$
+			Reemplazando y reagrupando,
+			$$3-5t + 2t^2 = a(1-t^2) + b(1+t) + c(1+t+t^2)$$
+			$$3-5t + 2t^2 = (a+b+c) + (b+c)t + (c-a)t^2$$
+			Por lo que
+			$$\begin{array}{rl}
+			a + b +c & = 3\\
+			b + c & =-5\\
+			-a+c & =2
+			\end{array} \Longrightarrow
+			\begin{array}{rl}
+			a & = 8\\
+			b & =-15\\
+			c & = 10
+			\end{array}$$
+			Luego, las coordenadas de $f(t)$ en $B$ son $(8,-15,10)$.\\
+			\\
+			Veamos ahora que ocurre con $g(t)$. Nuevamente, buscamos $a$, $b$, $c$, tal que
+			$$g(t) = 1-3t =  ap_1(t) + bp_2(t) + cp_3(t)$$
+			Esto es,
+			$$1-3t = a(1-t^2) + b(1+t) + c(1+t+t^2)$$
+			$$1-3t = (a+b+c) + (b+c)t + (c-a)t^2$$
+			Lo que se nos lleva al sistema
+			$$\begin{array}{rl}
+			a + b +c & = 1\\
+			b + c & =-3\\
+			-a+c & =0
+			\end{array} \Longrightarrow
+			\begin{array}{rl}
+			a & = 4\\
+			b & =-7\\
+			c & = 4
+			\end{array}$$
+			Con lo que las coordenadas de $g(t)$ en $B$ son $(4,-7,4)$.
+\item Use los vectores de coordenadas encontrados en la parte anterior para determinar si el conjunto $\{p_1(t), f(t), g(t)\}$ es L.I. o L.D.\\
+			\\
+			Para determinar esto, podemos usar las coordenadas de estos elementos en cualquier base. Por conveniencia, usaremos la base $B$. Aquí, los vectores de coordenadas son
+			$$p_1(t) = (1,0,0)$$
+			$$f(t) = (8,-15,10)$$
+			$$g(t) = (4,-7,4)$$
+			Armamos una matriz con ellos y pivoteamos,
+			$$\begin{bmatrix}
+			1 & 0 & 0 \\
+			8 & -15 & 10 \\
+			4 & -7 & 4
+			\end{bmatrix}
+			\sim
+			\begin{bmatrix}
+			1 & 0 & 0 \\
+			0 & 1 & 0 \\
+			0 & 0 & 1
+			\end{bmatrix}$$
+			Por lo que sus el conjunto $\{p_1(t), f(t), g(t)\}$ es $L.I.$
+\end{enumerate}
+\end{solucion}
+\item Sea
+$$T\left(\left[ \begin{array}{c}
+a\\ b\\ c \end{array} \right] \right) = (a+b+c) + (a-b+2c)x +
+(3b-c)x^2
+$$
+Determine una base para $Nul(T) $ y para $Im (T) $ y las dimensiones de estos subespacios.
+\begin{solucion}
+Notemos que lo que estamos generando son polinomios de grado menor o igual a 2. La base canónica para estos polinomios es $B=\{1, x, x^2\}$
+En primer lugar, obtengamos la matriz asociada a la transformación lineal respecto a las bases canónicas, esto es,
+$$A = \begin{bmatrix}
+1 & 1 & 1 \\
+1 & -1 & 2 \\
+0 & 3 & -1
+\end{bmatrix}$$
+Recordemos que $Nul(T)$ corresponde a la solución del sistema homogeneo, es decir $Ax = 0$, esto es,
+$$\begin{bmatrix}
+1 & 1 & 1 \\
+1 & -1 & 2 \\
+0 & 3 & -1
+\end{bmatrix} \sim 
+\begin{bmatrix}
+1 & 0 & 0 \\
+0 & 1 & 0 \\
+0 & 0 & 1
+\end{bmatrix}$$
+Por lo que la solución del sistema homogeneo es $Gen\left\{\begin{pmatrix}0 \\ 0 \\ 0 \end{pmatrix}\right\}$. Recordemos que este vector es un vector de coordenadas, sin embargo, al ser el vector nulo, este generado equivale a $Gen\{0\}$.\\
+
+Veamos ahora el $Im (T)$, que corresponde a las bases $LI$. Esto es equivalente a ver las columnas $LI$ de $A$, que ya sabemos que son todas. Por lo tanto, 
+$$Im(A) = Gen\left\{\begin{pmatrix}1 \\ 0 \\ 0 \end{pmatrix},\begin{pmatrix}0 \\ 1 \\ 0 \end{pmatrix}, \begin{pmatrix}1 \\ 0 \\ 0 \end{pmatrix}\right\}$$
+Luego, traduciendo estos vectores coordenadas, concluimos que
+$$Im(T) = Gen\{1, x, x^2\}$$
+Finalmente, las dimensiones de $Nul(T)$ y $Im(T)$ son 0 y 3, respectivamente.
+\end{solucion}
+\item Sean $B_1 = \{1+x,1-x,1+x^2\}$ y $B_2$ bases de $P_2(\R)$ tales que para todo $p \in P_2(\R)$
+	$$ \begin{bmatrix}
+	1 & 0 & -1\\
+	1 & 1 & 0 \\
+	0 & 1 & 2
+	\end{bmatrix} [p]_{B_1} = [p]_{B_2}$$
+	Determine los polinomios que forman la base $B_2$.
+\begin{solucion}
+Notemos que la matriz que nos dan corresponde a la matriz cambio de base de $B_1$ a $B_2$. Recordemos que una matriz cambio de base, de $B_1$ a $B_2$, corresponde a la matriz formada por las coordenadas de los elementos de $B_1$ en la base $B_2$.
+		
+		En base a lo anterior, dado que tenemos los vectores de $B_1$, lo que necesitamos es justamente lo contrario, es decir, la matriz cambio de base de $B_2$ a $B_1$. De esta manera, tendriamos las coordenadas de los elementos de $B_2$ en la base $B_1$, por lo que podriamos calcularlos con facilidad, ya que tenemos estos últimos.
+		
+		Para encontrar esta matriz, basta con obtener la inversa de la matriz cambio de base dada, esto es
+		$$ \left[\begin{array}{ccc|ccc}
+		1 & 0 & -1 & 1 & 0 & 0\\
+		1 & 1 & 0 & 0 & 1 & 0\\
+		0 & 1 & 2 & 0 & 0 & 1
+		\end{array}\right] \sim 
+		\left[\begin{array}{ccc|ccc}
+		1 & 0 & 0 & 2 & -1 & 1\\
+		0 & 1 & 0 & -2 & 2 & -1\\
+		0 & 0 & 1 & 1 & -1 & 1
+		\end{array}\right]$$
+		con lo que
+		$$A_{B_2}^{B_1} = \begin{bmatrix}
+		2 & -1 & 1\\
+		-2 & 2 & -1\\
+		1 & -1 & 1
+		\end{bmatrix}$$
+		Sea 
+		$$B_2 = \{q_1(x), q_2(x), q_3(x)\}$$
+		Las columnas de $A_{B_2}^{B_1}$ corresponden a los vectores de coordenada de $q_1$, $q_2$ y $q_3$, respectivamente, en la base $B_1$.
+		
+		Luego,
+		$$q_1(x) = 2(1+x) - 2(1-x) + (1+x^2) = 1+4x+x^2$$
+		$$q_2(x) = -(1+x) + 2(1-x) - (1+x^2) = -3x-x^2$$
+		$$q_3(x) = (1+x) - (1-x) + (1+x^2) = 1+2x+x^2$$
+		Finalmente,
+		$$B_2 = \{1+4x+x^2,-3x-x^2,1+2x+x^2\}$$
+\end{solucion}
+\item Sean $B$ y $C$ bases de un espacio vectorial $V$ y $P = \begin{bmatrix}4 &-1 \\ 6 & -1\end{bmatrix}$ la matriz de cambio de coordenadas tal que $[v]_C = P[v]_B\ \forall v \in V$
+\begin{enumerate}[a)]
+\item Demuestre que el conjunto $W = \{v \in V: [v]_C = 2[v]_B\}$ es un subespacio de $V$.
+\item Si $B=\{v_1,v_2\}$ determine una base para $W$ en términos de la base de $B$.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item Demuestre que el conjunto $W = \{v \in V: [v]_C = 2[v]_B\}$ es subespacio de $V$.
+			
+			\begin{enumerate}
+				\item No vacio $(0\in W)$
+				$$\begin{array}{cc}
+				[\vec{0}]_C = \vec{0}\\
+				2 \cdot [\vec{0}]_B = 2 \cdot \vec{0} = 0
+				\end{array} \Longrightarrow \vec{0} = \vec{0} \ra \vec{0} \in W$$	
+				\item Suma y multiplicación (a la vez)	
+				
+				
+				Sea $u, v \in W$ y $\alpha, \beta \in \R$, debemos demostrar que $\alpha u + \beta v \in W$
+				$$\begin{array}{rcl}
+				[\alpha u + \beta v]_C & = & 2 [\alpha u + \beta v]_B \\
+				& = & 2 [\alpha u + \beta v]_B \\
+				& = & 2 [\alpha u]_B + 2[\beta v]_B \\
+				& = & \alpha 2[u]_B + \beta 2[v]_B \\
+				& = & \alpha [u]_C + \beta [v]_C \\
+				& = & [\alpha u]_C + [\beta v]_C \\
+				{[}\alpha u + \beta v]_C & = & [\alpha u +\beta v]_C
+				\end{array}
+				$$
+			\end{enumerate}
+			$$\blacksquare$$
+\item Si $B=\{v_1,v_2\}$ determine una base para $W$ en términos de la base de $B$.
+			
+			Sea $B = \{v_1, v_2\}$ la base dada, busquemos una base $B_W$ de $W$\\
+			\\
+			Sea $v \in W$,
+			$$v = x_1v_1 + x_2v_2 \ra x = \begin{pmatrix} x_1 \\ x_2 \end{pmatrix} = [v]_B$$
+			Además,
+			$$\begin{array}{cclcl}
+			[v]_C & = & 2[v]_B & = & 2x \\
+			{[}v]_C & = & P[v]_B & = & Px
+			\end{array} \Longrightarrow
+			2x = Px$$
+			Luego,
+			$$2x = Px$$
+			$$Px - 2x = 0$$
+			$$(P - 2I)x = 0$$
+			$$\left(\begin{bmatrix}4 &-1 \\ 6 & -1\end{bmatrix} - \begin{bmatrix}2 &0 \\ 0 & 2\end{bmatrix}\right)x = 0$$
+			$$\begin{bmatrix}2 &-1 \\ 6 & -3\end{bmatrix}x = 0$$
+			Resolviendo el sistema,
+			$$\begin{bmatrix}2 &-1 \\ 6 & -3\end{bmatrix} \sim 
+			\begin{bmatrix}2 &-1 \\ 0 & 0\end{bmatrix} \ra x_2 = 2x_1$$
+			Luego,
+			$$v = x_1v_1 + 2x_1v_2 = x_1(v_1 + 2v_2)$$
+			Finalmente,
+			$$B_W = \{v_1 + 2v_2\}$$
+\end{enumerate}
+\end{solucion}
+\item Calcular los valores y vectores propios de
+	$$ A = \begin{bmatrix} 1 & 2 & -1\\ 1 & 0 & 1\\ 4 & -4 & 5\end{bmatrix}$$
+\begin{solucion}
+Para calcular los valores propios de una matriz, debemos buscar todos los valores de $\lambda$ tales que
+		$$A-\lambda I = 0$$
+		Luego, para cada valor propio obtenido, debemos resolver el problema
+		$$(A-\lambda I)v = 0$$
+		Encontrando así los valores propios.\\
+		\\
+		Pasando ahora al ejercicio,
+		$$\left|\begin{bmatrix}
+		1-\lambda & 2 & -1\\
+		1 & -\lambda & 1\\
+		4 & -4 & 5-\lambda 
+		\end{bmatrix}\right| = 0$$
+		Usando cofactores, tenemos que
+		$$\left|\begin{bmatrix}
+		1-\lambda & 2 & -1\\
+		1 & -\lambda & 1\\
+		4 & -4 & 5-\lambda 
+		\end{bmatrix}\right| = (1-\lambda)(-\lambda(5-\lambda) - -4) - 2((5-\lambda)-4) -(-4 - -4\lambda)$$
+		Simplificando,
+		$$=-\lambda^3 + 6\lambda^2 -11\lambda + 6 = -(\lambda - 1)(\lambda - 2) (\lambda - 3)$$
+		Por lo que los valores propios son
+		$$\lambda_1 =  1, \quad \lambda_2 = 2, \quad \lambda_3 = 3$$
+		Busquemos ahora los vectores propios asociados a cada valor propio
+		\begin{enumerate}[1)]
+			\item $\lambda_1 = 1$\\
+			\\
+			Debemos resolver el sistema $(A-I)v = 0$, esto es
+			\small$$\begin{bmatrix}
+			0 & 2 & -1\\
+			1 & -1 & 1\\
+			4 & -4 & 4
+			\end{bmatrix} \sim 
+			\begin{bmatrix}
+			1 & -1 & 1\\
+			0 & 2 & -1\\
+			4 & -4 & 4
+			\end{bmatrix} \sim 
+			\begin{bmatrix}
+			1 & -1 & 1\\
+			0 & 2 & -1\\
+			0 & 0 & 0
+			\end{bmatrix} \sim 
+			\begin{bmatrix}
+			1 & -1 & 1\\
+			0 & 1 & -\frac{1}{2}\\
+			0 & 0 & 0
+			\end{bmatrix} \sim 
+			\begin{bmatrix}
+			1 & 0 & \frac{1}{2}\\
+			0 & 1 & -\frac{1}{2}\\
+			0 & 0 & 0
+			\end{bmatrix}$$
+			Por lo que
+			$$\begin{array}{rcl}
+			x_1 & = & -\dfrac{1}{2}x_3\\
+			x_2 & = & \dfrac{1}{2}x_3\\
+			x_3 & = & x_3
+			\end{array} \Longrightarrow
+			v_1 = \begin{pmatrix}
+			-\frac{1}{2}\\
+			\frac{1}{2}\\
+			1
+			\end{pmatrix} \rightarrow
+			v_1 = \begin{pmatrix}
+			-1\\
+			1\\
+			2
+			\end{pmatrix}$$
+			La solución del sistema es el generado de $v$. Por esto, lo simplificamos al final para obtener un vector propio sin fracciones.
+			
+			\item $\lambda_2 = 2$\\
+			\\
+			Debemos resolver el sistema $(A-2I)v = 0$, esto es
+			\small$$\begin{bmatrix}
+			-1 & 2 & -1\\
+			1 & -2 & 1\\
+			4 & -4 & 3
+			\end{bmatrix} \sim 
+			\begin{bmatrix}
+			1 & 0 & \frac{1}{2}\\
+			0 & 1 & -\frac{1}{4}\\
+			0 & 0 & 0
+			\end{bmatrix}$$
+			Por lo que
+			$$\begin{array}{rcl}
+			x_1 & = & -\dfrac{1}{2}x_3\\
+			x_2 & = & \dfrac{1}{4}x_3\\
+			x_3 & = & x_3
+			\end{array} \Longrightarrow
+			v_2 = \begin{pmatrix}
+			-\frac{1}{2}\\
+			\frac{1}{4}\\
+			1
+			\end{pmatrix} \rightarrow
+			v_2 = \begin{pmatrix}
+			-2\\
+			1\\
+			4
+			\end{pmatrix}$$
+			
+			\item $\lambda_3 = 3$\\
+			\\
+			Debemos resolver el sistema $(A-3I)v = 0$, esto es
+			\small$$\begin{bmatrix}
+			-2 & 2 & -1\\
+			1 & -3 & 1\\
+			4 & -4 & 2
+			\end{bmatrix} \sim 
+			\begin{bmatrix}
+			1 & 0 & \frac{1}{4}\\
+			0 & 1 & -\frac{1}{4}\\
+			0 & 0 & 0
+			\end{bmatrix}$$
+			Por lo que
+			$$\begin{array}{rcl}
+			x_1 & = & -\dfrac{1}{4}x_3\\
+			x_2 & = & \dfrac{1}{4}x_3\\
+			x_3 & = & x_3
+			\end{array} \Longrightarrow
+			v_3 = \begin{pmatrix}
+			-\frac{1}{4}\\
+			\frac{1}{4}\\
+			1
+			\end{pmatrix} \rightarrow
+			v_3 = \begin{pmatrix}
+			-1\\
+			1\\
+			4
+			\end{pmatrix}$$
+		\end{enumerate}
+		Finalmente, los vectores propios son
+		$$v_1 = \begin{pmatrix}
+		-1\\
+		1\\
+		2
+		\end{pmatrix}, \quad
+		v_2 = \begin{pmatrix}
+		-2\\
+		1\\
+		4
+		\end{pmatrix}, \quad
+		v_3 = \begin{pmatrix}
+		-1\\
+		1\\
+		4
+		\end{pmatrix}$$
+\end{solucion}
+\item Determine si las siguientes afirmaciones son Verdaderas o Falsas.
+\begin{enumerate}[a)]
+\item El espacio fila de $AB$ es subespacio del espacio fila de $B$.
+\item Dada una base en un espacio vectorial $V$, el vector coordenado de un vector de $V$ con respecto a esa base, es único.
+\item Si $A$ y $B$ son similares y $\lambda$ es valor propio de $A$ entonces $\lambda$ es también valor propio de $B$.
+\end{enumerate}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item El espacio fila de $AB$ es subespacio del espacio fila de $B$.
+			
+			$$C = AB  \ra C^T = B^TA^T \ra Col(C^T) = Col(B^TA^T)$$
+			Como al multiplicar una matriz por otra podemos, en el mejor de los casos, obtener la misma dimensión de antes,
+			$$Col(C^T) \subset Col(B^T) \ra Fil(C) \subset Fil(B)$$
+			Luego,
+			$$Fil(AB) \subset Fil(B)$$
+			Con lo que concluimos que el espacio fila de $AB$ es subespacio del espacio fila de $B$. Entonces, la afirmación es {\bf Verdadera}.
+\item Dada una base en un espacio vectorial $V$, el vector coordenado de un vector de $V$ con respecto a esa base, es único.
+			
+			Los vectores de una base son $L.I.$, por lo que existe una única combinación lineal para generar cada vector. Luego, la afirmación es {\bf Verdadera}.
+\item Si $A$ y $B$ son similares y $\lambda$ es valor propio de $A$ entonces $\lambda$ es también valor propio de $B$.
+			
+			Tomemos, las matrices
+			$$A = \begin{bmatrix}
+			1 & 0 \\ 0 & 1
+			\end{bmatrix}, \quad 
+			B = \begin{bmatrix}
+			2 & 0 \\ 0 & 2
+			\end{bmatrix}$$
+			Los valores propios de $A$ son $\lambda = 1$ (multiplicidad 2) y los de $B$ son $\lambda = 2$ (multiplicidad 2), por lo que la afirmación es {\bf Falsa}.
+\end{enumerate}
+\end{solucion}
+\item Sea $A$ una matriz invertible, y sea $\lambda$ un valor propio de $A$. Demuestre que $\lambda \neq 0$ y que $\dfrac{1}{\lambda}$ es un valor propio de $A^{-1}$.
+\begin{solucion}
+
+		P.D. $\lambda \neq 0 \wedge \dfrac{1}{\lambda} \text{ es VP de }A^{-1}$
+		
+		Digamos que $\lambda = 0$. Luego, como $\lambda = 0$ es un VP, tenemos que
+		$$det(A-\lambda I) = 0$$
+		$$det(A-0 I) = 0$$
+		$$det(A) = 0$$
+		Pero $det(A) \neq 0$, ya que $A$ es invertible. Entonces, $\lambda \neq 0$.
+		
+		Notemos también que
+		$$A^{-1}x 
+		= A^{-1}\left(\dfrac{1}{\lambda}(\lambda x)\right)
+		= A^{-1}\dfrac{1}{\lambda}(\lambda x)
+		= \dfrac{1}{\lambda}A^{-1}(A x)
+		= \dfrac{1}{\lambda} x$$
+		$$A^{-1}x 
+		= \dfrac{1}{\lambda} x$$
+		De donde se desprende que $\dfrac{1}{\lambda}$ es valor propio de $A^{-1}$.
+\end{solucion}
+\item Sea $A$ una matriz de $2\times 2$ de rango 1 tal que $A\begin{bmatrix} 1 \\ 2\end{bmatrix} = \begin{bmatrix} 2 \\ 4 \end{bmatrix}$. ¿Es $A$ diagonalizable? Justifique.
+\begin{solucion}
+Notemos que
+		$$A\begin{bmatrix} 1 \\ 2\end{bmatrix} = \begin{bmatrix} 2 \\ 4 \end{bmatrix}
+		= A\begin{bmatrix} 1 \\ 2\end{bmatrix} = 2\begin{bmatrix} 1 \\ 2 \end{bmatrix}$$
+		Luego, $\lambda_1 = 2$ es valor propio de la matriz $A$ y $v_1 = \begin{bmatrix} 1 \\ 2\end{bmatrix}$ es el vector propio asociado.
+		
+		Como $A$ es de rango 1, $\exists u \neq 0$ tal que $Au = $. Para ese $u$ se cumple que
+		$$Au = 0 \ra Au = 0 u$$
+		Luego, $\lambda_2 = 0$ es valor propio de la matriz $A$ y $v_2 = u$ es el vector propio asociado.
+		
+		Finalmente, como la multiplicidad algebraica es igual a la multiplicidad geométrica, la matriz es diagonalizable.
+\end{solucion}
+\item Diagonalice la matriz
+	$$M = \begin{bmatrix}
+	1 & 0 & 0\\
+	1 & 1 & 2 \\
+	1 & 0 & 3
+	\end{bmatrix}$$
+	y encuentre una matriz $N$ tal que $N^3 = M$.
+\begin{solucion}
+Buscamos los valores propios,
+		$$det(M-\lambda I) = \left|\begin{bmatrix}
+		1-\lambda & 0 & 0\\
+		1 & 1-\lambda & 2 \\
+		1 & 0 & 3-\lambda
+		\end{bmatrix}\right|
+		= (1-\lambda)(1-\lambda)(3-\lambda) = 0$$
+		$$\lambda_1 = 1 \ra \text{multiplicidad 2}$$
+		$$\lambda_2 = 3 \ra \text{multiplicidad 1}$$
+		Buscamos ahora los vectores propios,
+		\begin{itemize}
+			\item $\lambda_1 = 1$
+			
+			$$(A-I)x = 0$$
+			$$\begin{bmatrix}
+			0 & 0 & 0\\
+			1 & 0 & 2 \\
+			1 & 0 & 2
+			\end{bmatrix} \ra v_1 = \begin{pmatrix}
+			2 \\ 0 \\ -1
+			\end{pmatrix}, \quad
+			v_2 = \begin{pmatrix}
+			0 \\ 1 \\ 0
+			\end{pmatrix}$$
+			
+			\item $\lambda_2 = 3$
+			
+			$$(A-3I)x = 0$$
+			$$\begin{bmatrix}
+			-2 & 0 & 0\\
+			1 & -2 & 2 \\
+			1 & 0 & 0
+			\end{bmatrix} \ra v_3 = \begin{pmatrix}
+			0 \\ 1 \\ 1
+			\end{pmatrix}$$
+		\end{itemize}
+			Recordemos ahora que para diagonalizar una matriz debemos expresarla de la forma
+			$$M = PDP^{-1} \ra P = \begin{bmatrix}
+			v_1 & v_2 & v_3
+			\end{bmatrix}, \quad
+			D = \begin{bmatrix}
+			\lambda_1 & 0 & 0 \\
+			0 & \lambda_2 & 0 \\
+			0 & 0 & \lambda_3
+			\end{bmatrix}$$
+			Es importante recordar que cada vector propio debe ir asociado con su respectivo valor propio (misma columna).
+			
+			En nuestro ejercicio, debemos considerar $\lambda_1 = \lambda_2 = 1$ y $\lambda_3 = 3$. Entonces,
+			$$P = \begin{bmatrix}
+			2 & 0 & 0 \\
+			0 & 1 & 1 \\
+			-1 & 0 & 1
+			\end{bmatrix}, \quad
+			D = \begin{bmatrix}
+			1 & 0 & 0 \\
+			0 & 1 & 0 \\
+			0 & 0 & 3
+			\end{bmatrix}, \quad
+			P^{-1} = \begin{bmatrix}
+			\frac{1}{2} & 0 & 0 \\
+			-\frac{1}{2} & 1 & -1 \\
+			\frac{1}{2} & 0 & 1
+			\end{bmatrix}$$
+			Sea
+			$$R = \sqrt[3]{D} = \begin{bmatrix}
+			1 & 0 & 0 \\
+			0 & 1 & 0 \\
+			0 & 0 & \sqrt[3]{3}
+			\end{bmatrix}$$
+			y sea
+			$$N = PRP^{-1}$$
+			Notemos que	
+			$$N^3 = (PRP^{-1}) = PR\cancel{P^{-1}P}R\cancel{P^{-1}P}RP^{-1} = PR^3P^{-1} = PDP^{-1} = M$$
+			Finalmente, $N = P\sqrt[3]{D}P^{-1}$ es la matriz buscada.
+\end{solucion}
+\item Diagonalice $A =
+	\begin{bmatrix} 
+	-1 & -2 & 2 \\
+	0 & -1 & 0 \\
+	0 & -2 & 1
+	\end{bmatrix}$ y diagonalice $B = A^{10} + A - I$ 
+\begin{solucion}
+Buscamos los valores propios,
+		$$det(A-\lambda I) = \left|\begin{bmatrix}
+		-1-\lambda & -2 & 2 \\
+		0 & -1-\lambda & 0 \\
+		0 & -2 & 1-\lambda
+		\end{bmatrix}\right|
+		= (1+\lambda)^2(1-\lambda) = 0$$
+		$$\lambda_1 = -1 \ra \text{multiplicidad 2}$$
+		$$\lambda_2 = 1 \ra \text{multiplicidad 1}$$
+		Buscamos ahora los vectores propios,
+		\begin{itemize}
+			\item $\lambda_1 = -1$
+			
+			$$(A+I)x = 0 \ra v_1 = \begin{pmatrix}
+			1 \\ 0 \\ 1
+			\end{pmatrix}$$
+			
+			\item $\lambda_2 = 1$
+			
+			$$(A-I)x = 0 \ra v_2 = \begin{pmatrix}
+			1 \\ 0 \\ 0
+			\end{pmatrix}, \quad
+			v_2 = \begin{pmatrix}
+			0 \\ 1 \\ 1
+			\end{pmatrix}$$
+		\end{itemize}
+		Luego,
+		$$A = PDP^{-1} \ra P = \begin{bmatrix}
+		1 & 1 & 0 \\
+		0 & 0 & 1 \\
+		1 & 0 & 1
+		\end{bmatrix}, \quad
+		D = \begin{bmatrix}
+		1 & 0 & 0 \\
+		0 & -1 & 0 \\
+		0 & 0 & -1
+		\end{bmatrix}, \quad
+		P^{-1} = \begin{bmatrix}
+		0 & -1 & 1 \\
+		1 & 1 & -1 \\
+		0 & 1 & 0
+		\end{bmatrix}$$
+		Reemplacemos ahora en $B$,
+		$$\begin{array}{lcl}
+		B & = & A^{10} + A - I \\
+		 & = & (PDP^{-1})^{10} + PDP^{-1} - I \\
+		 & = & (PDP^{-1})^{10} + PDP^{-1} - PIP^{-1} \\
+		B & = & P(D^10 + D - I)P^{-1}
+		\end{array}$$
+		Además, sabemos que
+		$$D^{10} = \begin{bmatrix}
+		1^{10} & 0 & 0 \\
+		0 & (-1)^{10} & 0 \\
+		0 & 0 & (-1)^{10}
+		\end{bmatrix}
+		 = \begin{bmatrix}
+		1 & 0 & 0 \\
+		0 & 1 & 0 \\
+		0 & 0 & 1
+		\end{bmatrix} = I$$
+		Por lo tanto,
+		$$B = P(I + D - I)P^{-1} = PDP^{-1}$$
+		Con lo que concluimos que $A=B$, por lo que la diagonalización de $A$ también es diagonalización de $B$.
+\end{solucion}
+\item La matriz $\begin{bmatrix} 1 & -2 \\ 1 & 3 \end{bmatrix}$ actúa sobre $\mathbb{C}^2$. Determine los valores propios y una base para cada espacio propio de $\mathbb{C}^2$.
+\begin{solucion}
+En primer lugar, buscamos los valores propios,
+		$$det(A-\lambda I) = \left|\begin{bmatrix} 
+		1-\lambda & -2 \\ 
+		1 & 3-\lambda \end{bmatrix}\right| = (1-\lambda)(3-\lambda) + 2 = \lambda^2 - 4\lambda + 5$$
+		$$\lambda_{1,2} = 2 \pm i$$
+		Como los valores propios son un par de complejos conjugados, los vectores propios asociados a cada uno también lo serán, por lo que basta con buscar un solo vector propio.
+		
+		Para $\lambda = 2+i$,
+		$$(A-(2+i)\lambda)x = 0 \ra 
+		\begin{bmatrix} 
+		-1-i & -2 \\ 
+		1 & 1-i 
+		\end{bmatrix} \sim 
+		\begin{bmatrix} 
+		-1-i & -2 \\ 
+		0 & 0
+		\end{bmatrix}$$
+		$$(-1-i)x_1 - 2x_2 = 0 \ra \begin{array}{lcl}
+		x_1 & = & x_1 \\
+		x_2 & = & \dfrac{-1-i}{2}x_1
+		\end{array}$$
+		Luego,
+		$$v_1 = \begin{pmatrix}
+		2 \\
+		-1-i
+		\end{pmatrix}, \quad
+		v_2 = \begin{pmatrix}
+		2 \\
+		-1+i
+		\end{pmatrix} $$
+		Por último, las bases de los espacios propios están formadas por los vectores propios asociados a cada valor propio, es decir
+		$$E_{2+i} = Gen\left\{\begin{pmatrix}
+		2 \\
+		-1-i
+		\end{pmatrix}\right\}, \quad 
+		E_{2-i} = Gen\left\{\begin{pmatrix}
+		2 \\
+		-1+i
+		\end{pmatrix}\right\}$$
+\end{solucion}
+\item Sea $A$ una matriz de $5 \times 5$ tal que $A^t = -A$ y $q$ el polinomio dado por $q(x) = 2-x^2+4x^3$. Demuestre que $2$ es valor propio de la matriz $q(A)$.
+\begin{solucion}
+Sabemos que
+		$$det(A) = det(A^T) \wedge det(A^T) = det(-A)$$
+		$$det(A) = det(-A)$$
+		$$det(A) = -det(A)$$
+		$$det(A) = 0$$
+		Luego, existe $u \neq 0 | Au = 0$
+		
+		Notemos que
+		$$\begin{array}{lcl}
+		q(A) & = & 2I - A^2 + 4A^3\\
+		q(A) u & = & (2I - A^2 + 4A^3)u\\
+		& = & 2Iu - A^2u + 4A^3u \\
+		& = & 2Iu - A(Au) + 4A^2(Au) \\
+		& = & 2Iu - A0 + 4A^20 \\
+		& = & 2Iu \\
+		q(A) u & = & 2u
+		\end{array}$$
+		Luego, $\lambda = 2 $ es $VP$ de $q(A)$
+\end{solucion}
 \end{preguntas}
 \end{document}
