Solución de 2019/1/MAT1203/12

--- a/2019/1/MAT1203/12/solucion.tex
+++ b/2019/1/MAT1203/12/solucion.tex
@@ -117,7 +117,7 @@
 	$$B = \{u-v, 3u+2v\}$$
 	es ortogonal y encuentre las coordenadas del vector $4u - 9v$ respecto al conjunto $B$.
 \begin{solucion}
-Para demostrar que $B$ es ortogonal, debemos demostrar que todos sus elementos son ortogonales entre si, es decir, debemos demoestrar que
+Para demostrar que $B$ es ortogonal, debemos demostrar que todos sus elementos son ortogonales entre si, es decir, debemos demostrar que
 		$$(u-v) \cdot (3u+2v) = 0$$
 		Notemos que como $u$ y $v$ son ortogonales entre si, $u \cdot v = 0$. Luego,
 		$$\begin{array}{rcl}
@@ -265,7 +265,7 @@ $$[T]_B[t^2+1]_B = \begin{bmatrix}
 \end{pmatrix}
 =
 \begin{pmatrix}
-2 \\ -1 \\3
+2 \\ -1 \\ -3
 \end{pmatrix}$$
 Por lo tanto,
 $$T(t^2+1) = 2-t-3t^2$$
