Enunciado de 2018/1/MAT220E/4

--- a/2018/1/MAT220E/4/enunciado.tex
+++ b/2018/1/MAT220E/4/enunciado.tex
@@ -113,5 +113,15 @@
 \end{center}
 
 \begin{preguntas}
+\item Calcule el siguiente límite
+	$$\lim\limits_{x \ra \infty} \dfrac{\displaystyle\int_0^{arctan(x)} sen(ln(t^2+t+1)) dt}{x}$$
+\item Resuelva la siguiente integral
+	$$\displaystyle\int \dfrac{dx}{x(200-x)}$$
+\item Calcular la integral
+	$$\displaystyle\int_0^1 \dfrac{x^3+6x^2+13x+10}{x+1}dx$$
+\item Calcule el área de la región que se encuentra bajo la gráfica de la función $f(x) = e^xx^2$, donde $x \in [1,2]$
+\item Calcule la siguiente integral
+	$$\displaystyle\int sen^3(x)cos^4(x)dx$$
+\item $$\displaystyle\int x^2\ arctan(x)dx$$
 \end{preguntas}
 \end{document}
