Enunciado de 2019/1/MAT1610/12.5

--- a/2019/1/MAT1610/12.5/enunciado.tex
+++ b/2019/1/MAT1610/12.5/enunciado.tex
@@ -151,6 +151,8 @@ $$F(x) = \displaystyle\int_0^{x^2} \dfrac{xtan(t)}{1+t^2}dt$$
 \item Demuestre que la función
 $$F(x) = \displaystyle\int_{1-x}^{1+x} \ln(t^2)dt, \quad x \in [0, \frac{1}{2}]$$
 es decreciente
+\item Calcule el siguiente límite
+	$$\lim\limits_{x \ra \infty} \dfrac{\displaystyle\int_0^{arctan(x)} sen(ln(t^2+t+1)) dt}{x}$$
 \item Resolver las siguientes integrales indefinidas
 \begin{tasks}(2)
 \task $\displaystyle\int \dfrac{e^{ln(x)}}{x^2+7}dx$
@@ -172,6 +174,7 @@ es decreciente
 \item Calule el área de la región acotada por las curvas $y=x^2-4$ e $y = -x^2-2x$ en el intervalo $I =  [-3.3]$.
 \item Encuentre el área acotada por las curvas por las curvas $y=x(x^2+11)$ e $y=6(x^2+1)$.
 \item Determine el área limitada por la parabola $y^2=4x$ y la recta $y=x$.
+\item Calcule el área de la región que se encuentra bajo la gráfica de la función $f(x) = e^xx^2$, donde $x \in [1,2]$
 \item Hallar el área de la elipse
 	$$\dfrac{x^2}{9} + \dfrac{y^2}{4} = 1$$
 \item Usando integrales, calcule el área del siguiente triangulo
