Enunciado de 2018/1/MAT220E/6

--- a/2018/1/MAT220E/6/enunciado.tex
+++ b/2018/1/MAT220E/6/enunciado.tex
@@ -113,5 +113,12 @@
 \end{center}
 
 \begin{preguntas}
+\item Calcule el volumen del sólido generado al rotar la curva $y=x^2$ en torno al eje $y$ con $0 \leq y \leq 4$
+\item Encuentre el volumen resultante de girar la curva $y=\dfrac{1}{\sqrt[]{x}}$ en torno al eje $x$ con $x \in [1,e]$
+\item La base de un sólido es un círculo de radio $a$ y todas sus secciones perpendiculares a un diametro fijo de éste son triángulos rectángulos isósceles con la hipotenusa sobre la base del sólido. Hallar el volúmen del sólido.
+\item La base de un sólido es la región acotada por las parabolas
+	$$y=x^2 \quad e \quad y = 3-2x^2$$
+	y sus secciones perpendiculares al eje $y$ son triángulos equiláteros. Hallar el volúmen del sólido.
+\item Determinar el volumen del sólido generado al rotar las curvas $y=x$ e $y= x^2$ en torno al eje $x$, para $x \int [0,1]$
 \end{preguntas}
 \end{document}
